solved alignment issue on navigation modal

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ img {
 }
 
 .nav .header__row {
-  padding: 1.375em 0.65em;
+  padding: 1.375em 1.5em;
 
   background: var(--clr-white);
 }
